--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,15 @@
     <meta charset="utf-8" />
     <link rel="icon" href="./logoicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-      <meta name="description" content="Metatesk">
+    <meta name="description" content=" Education in metaverse with metatesk  ">
+    <meta name="keywords" content="metaverse, education, online">
+    <meta name="title" content="Metatesk">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link href="http://fonts.cdnfonts.com/css/minecraft-4" rel="stylesheet">
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Metatesk</title>
